--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.3",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1"
   }
